# rules_proto_grpc_js

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  js_grpc_web_compile.bzl  package-lock.json  package.json  pnpm-lock.yaml
