module(
    name = "rules_proto_grpc_js",
    version = "1.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_proto_grpc", version = "5.1.0")
bazel_dep(name = "aspect_rules_js", version = "2.3.7")
bazel_dep(name = "rules_python", version = "1.4.1")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_java", version = "8.12.0")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "zlib", version = "1.3.1.bcr.6")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_archive(
    name = "com_google_protobuf_javascript",
    strip_prefix = "protobuf-javascript-3.21.2",
    urls = ["https://github.com/protocolbuffers/protobuf-javascript/archive/v3.21.2.tar.gz"],
    sha256 = "35bca1729532b0a77280bf28ab5937438e3dcccd6b31a282d9ae84c896b6f6e3",
)

http_archive(
    name = "com_google_protobuf",
    strip_prefix = "protobuf-21.10",
    urls = ["https://github.com/protocolbuffers/protobuf/archive/v21.10.tar.gz"],
    sha256 = "f3f9ce6dc288f2f939bdc9d277ebdfbc8dbcd51741071f93da70e0e62919f57f",
)

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")

use_repo(pnpm, "pnpm")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")

npm.npm_translate_lock(
    name = "npm",
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    generate_bzl_library_targets = True,
    update_pnpm_lock = True,
    data = ["@@//:package.json"],
)

use_repo(npm, "npm")

bazel_dep(name = "aspect_rules_ts", version = "3.6.0")

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)

rules_ts_ext.deps()

use_repo(rules_ts_ext, "npm_typescript")

http_file(
    name = "grpc_web_plugin_darwin_arm64",
    urls = ["https://github.com/grpc/grpc-web/releases/download/1.4.2/protoc-gen-grpc-web-1.4.2-darwin-aarch64"],
    sha256 = "87263950cd36ec875c86b1e50625215727264c5495d6625ddf9e4f79aeef727e",
    executable = True,
)

http_file(
    name = "grpc_web_plugin_darwin_x86_64",
    urls = ["https://github.com/grpc/grpc-web/releases/download/1.4.2/protoc-gen-grpc-web-1.4.2-darwin-x86_64"],
    sha256 = "6b73e8e9ef2deb114d39c9eea177ff8450d92e7154b5e47dea668a43499a2383",
    executable = True,
)

http_file(
    name = "grpc_web_plugin_linux",
    urls = ["https://github.com/grpc/grpc-web/releases/download/1.4.2/protoc-gen-grpc-web-1.4.2-linux-x86_64"],
    sha256 = "5e82c3f1f435e176c94b94de9669911ab3bfb891608b7e80adff358f777ff857",
    executable = True,
)

http_file(
    name = "grpc_web_plugin_windows",
    urls = ["https://github.com/grpc/grpc-web/releases/download/1.4.2/protoc-gen-grpc-web-1.4.2-windows-x86_64.exe"],
    sha256 = "3a0fc44662cb89a5c101b632e3e8841d04d9bea3103512deae82591e2acdff93",
    executable = True,
)
